--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -7,6 +7,10 @@
     --textcolor: rgb(51, 102, 102);
   }
 
+h1, h2, h3{
+    color: var(--textcolor);
+}
+
 
 body{
     padding: 0;
@@ -42,9 +46,11 @@ li{
 
 .navgrid{
     display: grid;
-    width: 100%;
-    grid-template-columns: repeat(3, 1fr);
+    width: 70%;
+    grid-template-columns: 1fr;
     grid-gap: 5%;
+    padding-left: 15%;
+    padding-right: 15%;
     padding-top: 2%;
 }
 
@@ -63,13 +69,81 @@ nav{
 }
 
 .picgrid{
+    width: 70%;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 140px;
-    padding-left: 30px;
-    padding-right: 30px;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 15%;
+    margin-right: 10px;
     grid-gap: 25px;
     background-color: white;
+    align-items: flex-start;
+}
+
+.picgrid2{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+    grid-gap: 25px;
+}
+
+.picgrid3{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+}
+
+.picgrid3 a, .picgrid3 img{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    min-width: 100%;
+}
+
+.picgrid3 a{
+    z-index: 4;
+    text-decoration: none;
+}
+
+.picgrid3 p{
+    z-index: 3;
+    grid-row: 1/2;
+    grid-column: 1/2;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin: 0;
+    font-size: 3em;
+    color: white;
+    font-family: 'Avenir';
+    opacity: 0;
+    background: rgb(94, 94, 94);
+    position: relative;
+    top: 0;
+    transition: opacity .5s, background .5s;
+    width: 100%;
+    height: 100%;
+}
+
+.picgrid3 p:hover{
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.picgrid2 img{
+    box-shadow: 5px 5px 10px rgb(95, 92, 92);
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: auto;
+    z-index: 2;
+    position: relative;
+    top: 0;
+    transition: position 1s, top 1s;
+}
+
+.picgrid img{
+    width: auto;
+    height: auto;
+    z-index: 1;
 }
 
 nav a{
@@ -112,13 +186,107 @@ h1{
     text-align: center;
 }
 
-img{
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
-    width: auto;
-}
-
 nav{
     min-width: 800px;
+}
+.me{
+    width: 70%;
+    margin-left: 15%;
+    justify-content: center;
+    text-align: center;
+    font-size: 2em;
+    border-top: 2px rgb(51, 102, 102) solid;
+    border-bottom: 2px rgb(51, 102, 102) solid;
+    margin-top: 7%;
+    padding-bottom: 7%;
+}
+
+.ag{
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+}
+
+.footer{
+    background-color: var(--textcolor);
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.footer p{
+    color: white;
+}
+
+.pgl{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+.pgl img{
+    max-width: 100%;
+    padding: 2%;
+    background-color: #3ca384;
+    z-index: 3;
+    grid-column: 1/2;
+}
+
+.pgl p{
+    width: auto;
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    padding-left: 5%;
+    background-color: #449e83;
+    color: white;
+    z-index: 2;
+    position: relative;
+    left: -100%;
+    transition: left 1s;
+}
+
+.pgl img:hover + p{
+    left: 0;
+}
+
+.pgr{
+    display: grid;
+    max-width: 100%;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin-right: 2%;
+}
+
+.pgr img{
+    max-width: 100%;
+    padding: 2%;
+    background-color: #3ca384;
+    z-index: 3;
+    grid-column: 2/3;
+}
+
+.pgr p{
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    max-width: 100%;
+    height: 100%;
+    padding-left: 5%;
+    margin-top: 5%;
+    background-color: #449e83;
+    color: white;
+    z-index: 2;
+    position: relative;
+    right: -100%;
+    transition: right 1s;
+}
+
+.pgr img:hover + p{
+    right: 0;
 }
