--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -17,6 +17,7 @@ body{
     margin: 0;
     font-size: 24px;
     min-width: 800px;
+    font-family: 'Avenir';
 }
 
 .title{
@@ -204,6 +205,7 @@ nav{
 .ag{
     display: grid;
     grid-template-columns: 3fr 2fr;
+    max-height: 30%;
 }
 
 .footer{
