--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -15,8 +15,8 @@ h1, h2, h3{
 body{
     padding: 0;
     margin: 0;
+    min-width: 1040px;
     font-size: 24px;
-    min-width: 800px;
     font-family: 'Avenir';
 }
 
@@ -58,6 +58,7 @@ li{
 .navgrid2{
     width: 100%;
     display: grid;
+    place-items: center;
     grid-template-columns: repeat(4, 1fr);
     font-size: 24px;
     grid-gap: 15px;
@@ -66,7 +67,7 @@ li{
 
 nav{
     background-color: white;
-    height: 8%
+    height: 8%;
 }
 
 .picgrid{
@@ -208,11 +209,52 @@ nav{
     max-height: 30%;
 }
 
+.ag p{
+    overflow:scroll;
+    text-align:left;
+    margin-left: 5%;
+    margin-right: 5%;
+    grid-column: 1/2;
+    font-size: 50%;
+}
+
+.aboutg{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 10%;
+    grid-gap: 25px;
+}
+
+.aboutg img{
+    width: 100%;
+}
+
+.aboutg p{
+    color: rgb(51, 102, 102);
+    font-size: .6em;
+}
+
 .footer{
-    background-color: var(--textcolor);
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
+    background-color: white;
+    width: 60%;
+    height: 10%;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+.fg{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    place-items: center;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
+.fg img{
+    max-width: 50px;
 }
 
 .footer p{
@@ -291,4 +333,32 @@ nav{
 
 .pgr img:hover + p{
     right: 0;
+}
+
+@media screen and (max-width:1400px) and (min-width:1240px) {
+    .ag p{
+        font-size: 45%;
+    }
+    
+}
+
+@media screen and (max-width:1240px) and (min-width:1100px) {
+    .ag p{
+        font-size: 40%;
+    }
+    
+}
+
+@media screen and (max-width:1100px) and (min-width:950px) {
+    .ag p{
+        font-size: 35%;
+    }
+    
+}
+
+@media screen and (max-width:950px) and (min-width:10px) {
+    .ag p{
+        font-size: 30%;
+    }
+    
 }
