--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -88,10 +88,18 @@ nav{
     grid-gap: 25px;
 }
 
+.picgrid20{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+    height: fit-content;
+}
+
 .picgrid3{
     display: grid;
     width: 100%;
     grid-template-columns: 1fr;
+    place-items: center;
 }
 
 .picgrid3 a, .picgrid3 img{
@@ -103,15 +111,17 @@ nav{
 .picgrid3 a{
     z-index: 4;
     text-decoration: none;
+    height: 100%;
+    text-align: center;
 }
 
 .picgrid3 p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 3;
     grid-row: 1/2;
     grid-column: 1/2;
-    justify-content: center;
-    align-items: center;
-    display: flex;
     margin: 0;
     font-size: 3em;
     color: white;
@@ -193,9 +203,11 @@ nav{
 }
 .me{
     width: 70%;
-    margin-left: 15%;
+    padding-left: 15%;
+    padding-right: 15%;
     justify-content: center;
     text-align: center;
+    background-color: rgb(51, 102, 102);
     font-size: 2em;
     border-top: 2px rgb(51, 102, 102) solid;
     border-bottom: 2px rgb(51, 102, 102) solid;
@@ -210,8 +222,8 @@ nav{
 }
 
 .ag p{
-    overflow:scroll;
     text-align:left;
+    color: white;
     margin-left: 5%;
     margin-right: 5%;
     grid-column: 1/2;
@@ -220,20 +232,44 @@ nav{
 
 .aboutg{
     display: grid;
+    width: 70%;
     grid-template-columns: 1fr 1fr;
-    padding-left: 15%;
-    padding-right: 15%;
+    height: auto;
+    grid-gap: 50px;
+    margin-left: 15%;
+    margin-right: 15%;
     padding-top: 10%;
     grid-gap: 25px;
 }
 
 .aboutg img{
-    width: 100%;
+    width: 80%;
 }
 
 .aboutg p{
     color: rgb(51, 102, 102);
     font-size: .6em;
+}
+
+.contact{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+
+}
+
+.eg{
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+}
+
+.eg h1, .eg h2, .eg h3{
+    margin: 0;
+    padding: 0;
 }
 
 .footer{
@@ -265,34 +301,57 @@ nav{
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr;
-    align-items: center;
+    place-items: center;
 }
 
 .pgl img{
     max-width: 100%;
     padding: 2%;
-    background-color: #3ca384;
+    background-color: rgb(51, 102, 102);
     z-index: 3;
     grid-column: 1/2;
 }
 
-.pgl p{
+.pgl2 {
+    display: grid;
+    grid-template-columns: 1fr;
     width: auto;
+    margin-bottom: 2%;
+    height: 95%;
     max-width: 100%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 100%;
-    padding-left: 5%;
-    background-color: #449e83;
-    color: white;
+    width: 100%;
+    text-align: center;
+    background-color: rgb(51, 102, 102);
     z-index: 2;
     position: relative;
     left: -100%;
     transition: left 1s;
 }
 
-.pgl img:hover + p{
+.pgl2 h2{
+    text-align: left;
+    padding-left: 5%;
+    color: white;
+}
+
+.pgl2 h3{
+        text-align: left;
+        padding-left: 5%;
+        color: white;
+}
+
+.pgl2 p{
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    text-align: center;
+    padding-left: 5%;
+    background-color: rgb(51, 102, 102);
+    color: white;
+}
+
+.pgl a:hover + .pgl2{
     left: 0;
 }
 
@@ -307,31 +366,46 @@ nav{
 .pgr img{
     max-width: 100%;
     padding: 2%;
-    background-color: #3ca384;
+    background-color: rgb(51, 102, 102);
     z-index: 3;
     grid-column: 2/3;
 }
 
-.pgr p{
-    width: auto;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+.pgr a{
+    grid-column: 2/3;
+}
+
+.pgr2 {
     grid-column: 1/2;
     grid-row: 1/2;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: auto;
+    margin-bottom: 2%;
+    height: 95%;
     max-width: 100%;
-    height: 100%;
-    padding-left: 5%;
-    margin-top: 5%;
-    background-color: #449e83;
-    color: white;
+    width: 100%;
+    place-items: center;
+    text-align: center;
+    background-color: rgb(51, 102, 102);
     z-index: 2;
     position: relative;
     right: -100%;
     transition: right 1s;
 }
 
-.pgr img:hover + p{
+.pgr2 p{
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    text-align: center;
+    padding-left: 5%;
+    background-color: rgb(51, 102, 102);
+    color: white;
+}
+
+.pgr a:hover + .pgr2{
     right: 0;
 }
 
