--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -60,8 +60,9 @@ li{
     width: 70%;
     grid-template-columns: 1fr;
     grid-gap: 5%;
-    padding-left: 15%;
-    padding-right: 15%;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 5%;
 }
 
 .navgrid2{
@@ -284,7 +285,7 @@ nav{
 .footer{
     background-color: white;
     width: 60%;
-    height: 10%;
+    height: 12%;
     padding-left: 20%;
     padding-right: 20%;
 }
